# Task2

./: .env.example  .gitignore  README.md  fix_permissions.ps1  pyproject.toml  run.py
documents/: api_design_guide.txt  machine_learning_basics.txt  python_best_practices.md  system_design_notes.md
src/rag/: cli.py  config.py
src/rag/api/: app.py  models.py  routes.py
src/rag/generation/: generator.py  prompt.py
src/rag/ingestion/: chunker.py  loader.py  pipeline.py
src/rag/retrieval/: retriever.py
static/: index.html
tests/: test_api.py  test_chunker.py  test_loader.py
