[project]
name = "rag-qa"
version = "0.1.0"
description = "A RAG-based Q&A system for document collections with source attribution"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "chromadb>=0.4",
    "pymupdf>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
